# ale

./: .appveyor.yml  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  Testing the Cassini ISS Ale Driver .ipynb  code.json  cpp_env.yml  doc_environment.yml  environment.yml  genindex.html  index.html  objects.inv  print.prt  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  write_UvvisIsisLabelNaifSpiceDriver.ipynb
tests/: CMakeLists.txt  EalTest.cpp  Test.cpp  TestMain.cpp
tests/ctests/: AleTest.cpp  CMakeLists.txt  IsdTests.cpp  LoadTests.cpp  OrientationsTest.cpp  OrientationsTests.cpp  RotationTest.cpp  RotationTests.cpp  StatesTest.cpp  StatesTests.cpp  TestInterpUtils.cpp  VectorTests.cpp  isd_tests.cpp
tests/pytests/: conftest.py  test_apollo_drivers.py  test_base.py  test_cahvor_mixin.py  test_cassini_drivers.py  test_cassis_drivers.py  test_chandrayaan_driver.py  test_clementine_drivers.py  test_clipper_drivers.py  test_compression.py  test_cube_drivers.py  test_data_isis.py  test_data_naif.py  test_dawn_driver.py  test_dawn_drivers.py  test_distortion.py  test_env.py  test_formatter.py  test_galileo_drivers.py  test_gtiff_data_isis.py  test_gtiff_label.py  test_hayabusa2_drivers.py  test_hayabusa_drivers.py  test_ideal_drivers.py  test_isd_generate.py  test_isd_to_kernel.py  test_isis_formatter.py  test_isis_label.py  test_isis_spice_drivers.py  test_juno_drivers.py  test_kaguya_drivers.py  test_kernel_access.py  test_lo_drivers.py  test_load.py  test_lro_drivers.py  test_mariner_drivers.py  test_mdis_driver.py  test_mdis_drivers.py  test_mdis_integration.py  test_mex_drivers.py  (+18 more)
tests/pytests/data/: EN1072174528M.cub
tests/pytests/data/03821_16N196_S1/: 03821_16N196_S1_isis3.lbl  03821_16N196_S1_new_spice_0.xsp  03821_16N196_S1_new_spice_1.xsp  lro_clkcor_2020057_v00.tsc  moc42r_2010090_2010121_v03_0_sliced_-85000.xc  moc42r_2010090_2010121_v03_1_sliced_-85000.xc  mrflroAddendum002.ti
tests/pytests/data/1664MR0086340000802438C00_DRCL/: 1664MR0086340000802438C00_DRCL_pds3.lbl
tests/pytests/data/20190303T100344S990_map_iofL2pan_V001/: 20190303T100344S990_map_iofL2pan_V001_0.xsp  20190303T100344S990_map_iofL2pan_V001_1.xsp  20190303T100344S990_map_iofL2pan_V001_isis.lbl  bennu_v16.tpc  orex_ocams_addendum_v10.ti  orx_ocams_v07.ti  orx_sc_rel_190225_190303_v01_0_sliced_-64000.xc  orx_sc_rel_190225_190303_v01_1_sliced_-64000.xc  orx_sclkscet_00065.tsc  orx_struct_mapcam_v01_0_sliced_-64361.xc  orx_struct_mapcam_v01_1_sliced_-64361.xc  orx_v14.tf
tests/pytests/data/2264ML0121141200805116C00_DRCL/: 2264ML0121141200805116C00_DRCL_0.xsp  2264ML0121141200805116C00_DRCL_1.xsp  2264ML0121141200805116C00_DRCL_pds3.lbl  MSL_76_SCLKSCET.00019.tsc  msl_ml_20120731_c03.ti  msl_mr_20120731_c03.ti  msl_surf_hga_tlm_0_sliced_-76122.xc  msl_surf_hga_tlm_0_sliced_-76124.xc  msl_surf_hga_tlm_1_sliced_-76122.xc  msl_surf_hga_tlm_1_sliced_-76124.xc  msl_surf_ra_tlmres_0_sliced_-76301.xc  msl_surf_ra_tlmres_0_sliced_-76302.xc  msl_surf_ra_tlmres_0_sliced_-76303.xc  msl_surf_ra_tlmres_0_sliced_-76304.xc  msl_surf_ra_tlmres_0_sliced_-76305.xc  msl_surf_ra_tlmres_1_sliced_-76301.xc  msl_surf_ra_tlmres_1_sliced_-76302.xc  msl_surf_ra_tlmres_1_sliced_-76303.xc  msl_surf_ra_tlmres_1_sliced_-76304.xc  msl_surf_ra_tlmres_1_sliced_-76305.xc  msl_surf_rover_tlm_0_sliced_-76000.xc  msl_surf_rover_tlm_1_sliced_-76000.xc  msl_surf_rsm_tlmres_0_sliced_-76202.xc  msl_surf_rsm_tlmres_0_sliced_-76204.xc  msl_surf_rsm_tlmres_1_sliced_-76202.xc  msl_surf_rsm_tlmres_1_sliced_-76204.xc  msl_v08.tf
tests/pytests/data/2392975548_lvl3_0/: 2392975548_lvl3_0.ale_0.xsp  2392975548_lvl3_0.ale_1.xsp  2392975548_lvl3_0_isis.lbl  hayabusa.tsc  hayabusa_hp.tf  hayabusa_itokawarendezvous_v02n_0_sliced_-130000.xc  hayabusa_itokawarendezvous_v02n_1_sliced_-130000.xc  itokawa_fixed.tf  itokawa_gaskell_n3.tpc  nirs10.ti  nirsAddendum002.ti
tests/pytests/data/27265/: 27265-output.json  27265.isis_0.conf  27265.isis_0.xsp  27265_isis.lbl  MARINER_10_A_gem_0_sliced_-76000.cmt  MARINER_10_A_gem_0_sliced_-76000.xc  m10_v00.tf  mariner10.0001.tf  mariner10.0001.tsc  mariner10Addendum001.ti  mariner10Addendum002.ti
tests/pytests/data/3133_high_res_1/: 3133_high_res_1.ale_0.xsp  3133_high_res_1.ale_1.xsp  3133_high_res_1_isis.lbl  lo02.ti  lo3_photo_support_ME_0_sliced_-533000.xc  lunarOrbiterAddendum002.ti
tests/pytests/data/3133_med_res/: 3133_med_res_isis.lbl  ale_0.xsp  lo3_photo_support_ME_0_sliced_-533000.xc  lo_fict.tsc
tests/pytests/data/AS15-M-1450/: AS15-M-1450.isis_0.xsp  AS15-M-1450.isis_1.xsp  AS15-M-1450_isis3.lbl  AS15_M_REV35_v2_0_sliced_-915240.xc  AS15_M_REV35_v2_1_sliced_-915240.xc  apollo15.0001.tsc  apollo15MetricAddendum002.ti  apollo15_metric_v2.0001.ti  apollo15_v2.0002.tf
tests/pytests/data/B10_013341_1010_XN_79S172W/: B10_013341_1010_XN_79S172W.cub  B10_013341_1010_XN_79S172W.xsp  B10_013341_1010_XN_79S172W_0.xsp  B10_013341_1010_XN_79S172W_1.xsp  B10_013341_1010_XN_79S172W_isis3.lbl  B10_013341_1010_XN_79S172W_pds3.lbl  mro_ctx_v10.ti  mro_ctx_v11.ti  mro_sc_psp_090526_090601_0_sliced_-74000.xc  mro_sc_psp_090526_090601_1_sliced_-74000.xc  mro_sc_psp_090526_090601_sliced-74000.cmt  mro_sc_psp_090526_090601_sliced-74000.xc  mro_sclkscet_00082_65536.tsc  mro_v15.tf  pck00008.tpc
tests/pytests/data/CAS-MCO-2016-11-26T22.32.14.582-RED-01000-B1/: CAS-MCO-2016-11-26T22.32.14.582-RED-01000-B1.xsp  CAS-MCO-2016-11-26T22.32.14.582-RED-01000-B1_isis.lbl  cassis_ck_p_160312_191231_190601_sliced-143410.xc  de-403-masses.tpc  em16_tgo_cassis_v07.ti  em16_tgo_ops_v02.tf  em16_tgo_sc_spm_20161101_20170301_s20190703_v01_sliced-143000.xc  em16_tgo_step_20190823.tsc  em16_tgo_v18.tf  tgoCassisAddendum007.ti
tests/pytests/data/E6I0032/: CKmerge_type3.plt_0_sliced_-77001.xfr  CKmerge_type3.plt_1_sliced_-77001.xfr  E6I0032_isis3.lbl  gllssi2isisAle1_0.xsp  gllssi2isisAle1_1.xsp  mk00062b.tsc  ssiAddendum005.ti
tests/pytests/data/EN1072174528M/: EN1072174528M.cub  EN1072174528M.tiff  msgr_v231.tf  (+29 more)
(+752 files in other folders)
