[metadata]
name = Ale
version = 0.8.6
author = USGS ASC Development Team
description = An Abstraction library for reading, writing and computing ephemeris data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/USGS-Astrogeology/ale
license = CC0 1.0 Universal

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
	cmake >= 3.15
	numpy
	scipy >= 1.4.0
	spiceypy >= 5.1.0
	pyyaml
	python-dateutil
	pytest
	pytest-cov
	networkx
	breathe
	eigen
	
[options.entry_points]
console_scripts = 
    isd_generate = ale.isd_generate:main

[options.extras_require]
notebook = jupyter>=1.0.0

